--- a/_config.yml
+++ b/_config.yml
@@ -10,20 +10,28 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Lisa M. Simpson"
-resume_title:                   "VP of Global Communications"
+resume_name:                    "jeongha lee""
+resume_title:                   "Frontend Developer"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "lisasimpson@youremailaddress.com"
+resume_contact_email:           "aloha_jh@naver.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+resume_contact_telephone:       "010-4036-8132"
+resume_contact_address:         "서울시"
 
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<ul><li>주 사용 언어는 javascript 입니다.</li>
+<li>react-native를 이해하며, react hooks를 사용하여 개발할 수 있습니다.</li>
+<li>react-redux, redux-saga를 이용하여 개발할 수 있습니다.</li>
+<li>Java, JavaScript 언어를 이해하고 사용할 수 있습니다.</li>
+<li>django, .net, spring 다양한 프레임워크에서 프론트엔드 개발 경험이 있습니다.</li>
+<li>HTML, CSS의 웹표준과 웹 접근성을 준수하며 개발할 수 있습니다.</li>
+<li>jQuery를 사용하여 플러그인없이 UI/UX 인터렉션 구현에 능숙합니다.</li>
+<li>node.js express 또는 next를 이해하고 사용할 수 있습니다.</li>
+<li>OOP프로그래밍을 이해합니다.</li></ul>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -37,7 +45,7 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
-resume_section_recognition:     true
+resume_section_recognition:     false
 resume_section_links:           true
 resume_section_associations:    true
 # resume_section_interests:       true
@@ -45,14 +53,14 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_github_url:            "https://github.com/aloha-jh"
+  #resume_twitter_url:           "http://twitter.com/jglovier"
+  #resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  #resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://medium.com/@jglovier"
+  #resume_website_url:           "http://joelglovier.com"
+  resume_medium_url:            "https://aloha2jh.tistory.com/"
 resume_print_social_links:      true
 
 # Design settings
