--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Jekyll Resume Template"
+title: "jeongha"
 description: "A resume template for Jekyll and GitHub Pages sites."
 
 # Build settings
@@ -10,28 +10,27 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "jeongha lee""
+resume_name:                    "Jeongha Lee"
 resume_title:                   "Frontend Developer"
 
-# used for the contact button in _layouts/resume.html
+# contact button (in) _layouts/resume.html
 resume_contact_email:           "aloha_jh@naver.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "010-4036-8132"
-resume_contact_address:         "서울시"
+resume_contact_telephone:       "4036-8132"
+resume_contact_address:         "seoul"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
-display_header_contact_info:    "false"
+resume_header_contact_info:     "( design + publising + frontend ) 3 in 1"
+display_header_contact_info:    "true"
 
-resume_header_intro: "<ul><li>주 사용 언어는 javascript 입니다.</li>
-<li>react-native를 이해하며, react hooks를 사용하여 개발할 수 있습니다.</li>
-<li>react-redux, redux-saga를 이용하여 개발할 수 있습니다.</li>
-<li>Java, JavaScript 언어를 이해하고 사용할 수 있습니다.</li>
-<li>django, .net, spring 다양한 프레임워크에서 프론트엔드 개발 경험이 있습니다.</li>
-<li>HTML, CSS의 웹표준과 웹 접근성을 준수하며 개발할 수 있습니다.</li>
-<li>jQuery를 사용하여 플러그인없이 UI/UX 인터렉션 구현에 능숙합니다.</li>
-<li>node.js express 또는 next를 이해하고 사용할 수 있습니다.</li>
-<li>OOP프로그래밍을 이해합니다.</li></ul>"
+resume_header_intro: "<p>주 사용 언어는 javascript 입니다.</br/>
+HTML, CSS의 웹표준과 웹 접근성을 준수하며 개발할 수 있습니다.</br/>
+jQuery를 사용하여 플러그인없이 UI/UX 인터렉션 구현에 능숙합니다.</br/>
+Java 언어를 이해하고 사용할 수 있습니다.</br/>
+react hooks, redux, redux-saga를 사용하여 개발할 수 있습니다.</br/>
+node.js express 또는 next를 이해하고 사용할 수 있습니다.</br/>
+django, .net, spring 다양한 프레임워크에서 프론트엔드 개발 경험이 있습니다.</br/>
+</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -41,26 +40,22 @@ resume_looking_for_work:        "yes"
 
 # Decide which sections to use
 # comment out to hide
-resume_section_experience:      true
-resume_section_education:       true
-resume_section_projects:        true
+resume_section_experience:      false
+resume_section_education:       false
 resume_section_skills:          true
+resume_section_projects:        true
 resume_section_recognition:     false
 resume_section_links:           true
-resume_section_associations:    true
+resume_section_associations:    false
 # resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/aloha-jh"
-  # resume_twitter_url:           "http://twitter.com/jglovier"
-  # resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
-  # resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  resume_github_url:            "https://github.com/aloha-jh" 
   # resume_instagram_url:         "insert your Instagram URL here"
-  #resume_website_url:           "http://joelglovier.com"
-  resume_medium_url:            "https://aloha2jh.tistory.com/"
+  resume_website_url:           "http://aloha2jh.tistory.com"
+  # resume_medium_url:            "https://medium.com/@jglovier"
 resume_print_social_links:      true
 
 # Design settings
