--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ display_header_contact_info:    "true"
 resume_header_intro: "<p>주 사용 언어는 javascript 입니다.</br/>
 HTML, CSS의 웹표준과 웹 접근성을 준수하며 개발할 수 있습니다.</br/>
 jQuery를 사용하여 플러그인없이 UI/UX 인터렉션 구현에 능숙합니다.</br/>
-Java 언어를 이해하고 사용할 수 있습니다.</br/>
+OOP를 이해하고 Java 언어를 사용할 수 있습니다.</br/>
 react hooks, redux, redux-saga를 사용하여 개발할 수 있습니다.</br/>
 node.js express 또는 next를 이해하고 사용할 수 있습니다.</br/>
 django, .net, spring 다양한 프레임워크에서 프론트엔드 개발 경험이 있습니다.</br/>
@@ -43,7 +43,7 @@ resume_looking_for_work:        "yes"
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       false
-resume_section_skills:          true
+resume_section_skills:          false
 resume_section_projects:        true
 resume_section_recognition:     false
 resume_section_links:           false
