--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "jeongha"
+title: "frontend-developer jeongha-lee"
 description: "A resume template for Jekyll and GitHub Pages sites."
 
 # Build settings
