--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -27,7 +27,7 @@
   role: ● 메인 옵션창 추가 (부가기능 추가)
   duration: 2018
   description: 메인화면의 가공기상태 확인페이지에서 가공기의 세부정보 (피드,rpm등)를 사용자가 선택해서 선택된항목만 화면에 노출시켜주는 기능을 추가하였습니다.
-  summary: <ul class="resume-item-list"><li>asp 템플릿 repeaterM를 만들어 추가, ascx.cs에서 만든 db를 repeaterM과 데이터바인딩하였습니다.</li><li>C#에서 js로 인자값 넘겨서 실행시켜주기 위해 c#의 ClientScriptManager를 사용하였습니다.</li></ul>
+  summary: <ul class="resume-item-list"><li>asp 템플릿 repeaterM를 만들어 추가, ascx.cs에서 만든 db를 repeaterM과 데이터바인딩</li><li>첫 화면 렌더링시 C#에서 js로 데이터 받아서 실행시켜주기 위해 ClientScriptManager를 사용</li></ul>
   img: <img src="./images/sf_add.jpg"/> 
   skills: <span>html</span><span>css</span><span>javascript</span><span>jquery</span><span>ajax</span><span>.net</span><span>asp</span><span>c#</span>
 
@@ -54,7 +54,7 @@
   description:  
   summary: <ul class="resume-item-list"><li>설명.</li></ul>
   img: <img src="./images/dashboard.jpg"/> 
-  skills: <span>html</span><span>css</span><span>javascript</span><span>jquery</span><span>ajax</span> <span>.net</span><span>asp</span> 
+  skills: <span>html</span><span>css</span><span>javascript</span><span>jquery</span><span>ajax</span> <span>django</span><span>swagger</span><span>python</span>
 
 - project:   
   role: ● handoc
@@ -79,7 +79,7 @@
   description: 
   summary: <ul class="resume-item-list"><li>사용자간의 알림의 경우 핸드폰에 slack앱을 설치하여 slackAPI연동을 통해 스케줄완료를 클릭할경우 사용자가 설정해놓은 팀 또는 해당스케줄의 참여자들에게 알림이 가게 구현되었습니다</li><li>slack web api를 사용하여 결제승인을 서면으로 받지 않고 사장이 승인을 한 경우 바로 중간관리자가 확인할수 있는 기능을 추가하였습니다.</li><li>이미업로드되어 있는 파일을 관리자가 스케줄에 등록하여 나머지 사람들은해당 스케줄에 연관된 파일을 볼수 있는 기능등이 있습니다.</li></ul>
   img: <img src="./images/Scheduler.jpg"/>  
-  skills: <span>html</span><span>css</span><span>javascript</span><span>jquery</span><span>ajax</span><span>D3.js</span><span>swagger</span><span>pycharm</span><span>django</span><span>slack-API</span><span>python</span><span>mongoDB</span><span>mongoose</span><span>radis</span>
+  skills: <span>html</span><span>css</span><span>javascript</span><span>jquery</span><span>ajax</span><span>D3.js</span><span>swagger</span><span>django</span><span>slack-API</span><span>python</span><span>mongoDB</span><span>mongoose</span><span>radis</span>
   
   #########
 - project: 
@@ -102,12 +102,13 @@
   description: 일상 사진, 글을 공유하는 SNS web application, SPA입니다.
   summary: <ul class="resume-item-list"><li>React를 적용하여 virtualDOM을 사용함으로써 app의 성능 향상시킨 SPA 구현</li><li>React의 Component형식의 UI구성으로 재사용성과 유지보수 향상</li><li>React-redux, redux-saga로 비동기API요청처리와 효율적인 중앙 state 관리</li><li>SSR을 위한 frontend-server Next.js 적용</li><li>Next.js의 자동 코드 스플리팅 적용으로 빠른 페이지 로드</li><li>SSR을 통해초기렌더링 딜레이 단축</li><li>frontend-server와 backend-server를 나눠서 개발함으로써 DB확장성 증가</li><li>babel을 사용하여 crossbrowsing 문제를 해결</li><li>request, response과정에서 express의 웹 취약성으로부터 헤더보안설정을 위해 helmet사용함으로써 보안성 향상</li><ul>
   img:   
+  url: https://github.com/aloha-jh/round-bird
   skills: <span>ES6</span><span>JSX</span><span>react</span><span>react-redux</span><span>redux-saga</span><span>webpack</span><span>babel</span><span>nextjs</span><span>express</span><span>material-ui</span><span>nodemon</span><span>sequelize</span><span>mysql</span><span>npm</span><span>axios</span><span>bcrypt</span><span>cors</span><span>dotenv</span><span>express-session</span><span>cookie-parser</span><span>morgan</span><span>multer</span><span>passport</span>
 
 - project:  
   role: ● spring mvc shop
   duration: 2020.3-2020.6
-  description: 프론트엔드포지션 이더라도 api가 어떻게 만들어지는지, 서버는 요청을 어떻게 처리하는지에 대해 알아야할 필요성을 느껴 학원을 다니며 java언어를 배우게 되었습니다.
+  description: 
   summary: <ul class="resume-item-list"><li> </li><ul>
   img:   
   skills: <span>html/css</span><span>javascript</span><span>jquery</span><span>ajax</span><span>ES6</span><span>java</span><span>JSTL</span><span>spring</span><span>Annotation</span><span>AOP</span><span>EL</span><span>Oracle</span><span>mybatis</span><span>REST-API</span><span>REST-server</span>
@@ -117,5 +118,8 @@
   duration: 2015.11-2016.2
   description: 포트폴리오용으로 만든 디자이너에서 UI개발로 첫발돋음한 사이트
   summary: <ul class="resume-item-list"><li>웹접근성을 준수한 마크업</li><li>반응형을 고려한 홈페이지-PC외에도 tablet, mobile 등 다양한 기기별로 정보전달에 용의하게 하기위해 유동성있게 콘텐츠들을 제작</li><li>플러그인에 의존하지 않는 자바스크립트 구현능력</li><ul>
-  img:
+  img: <img src="./images/fly_2.png"/>  
   skills:
+
+
+ 
