--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -19,8 +19,8 @@
   role: ● 맵 페이지, 가공기 배치기능 추가 (기능 추가)
   duration: 2018
   description: 100개가 넘는 가공기를 한눈에 보고싶다는 요청 그리고 해당가공기를 실제 현장과 같은 위치의 화면에서 보여주는게 목적이였습니다. 클릭했을때 UI의 크기조절 및 배치기능을 하는 페이지를 만들게 되었습니다
-  summary: <ul class="resume-item-list"><li>jqueryUI를 사용해 여러대의 가공기를 드래그앤 드랍하여 가공기배치가 가능합니다.</li><li>ajax요청으로 RESTAPI 데이터를받아 작업하였습니다.</li><li>화면설계 및 디자인, 프론트엔드100%</li></ul>
-  img: <img src="./images/sf_b.jpg"/>  
+  summary: <ul class="resume-item-list"><li>jQueryUi를 사용해 드레그 이벤트, 드레그중일때 이벤트, 드롭다운 이벤트를 잡아서 각 이벤트에 따른 필요한 기능들을 구현하였습니다.</li><li>드롭다운시 해당공간에 갯수만큼의 공간이 존재해야 놓을수있음을 알려주는 파란색의 그림자 ui가보이게 되도록 구현하였습니다.</li><li>jqueryUI를 사용해 여러대의 가공기를 드래그앤 드랍하여 가공기배치가 가능합니다.</li><li>ajax요청으로 RESTAPI 데이터를받아 작업하였습니다.</li><li>화면설계 및 디자인, 프론트엔드100%</li></ul>
+  img: <img src="./images/sf_b_1.jpg"/><img src="./images/sf_b.jpg"/><img src="./images/sf_b_2.jpg"/>  
   skills: <span>html</span><span>css</span><span>javascript</span><span>jQuery</span><span>ajax</span><span>.net</span><span>asp</span>
 
 - project:  
@@ -50,17 +50,17 @@
   skills:
 - project:   
   role: ● saewoung
-  duration: 2016.10 
+  duration: 2016.8
   description: 금형을 제작하기 위해 필요한 여러가지 공정과정들을 계획하고 관리하는 프로그램 입니다. 제품및 주문정보, BOM(Bill of Material), 생산계획관리, 외주/소재/구매, 비용분석, 데시보드 페이지로 이루어져 있습니다.
-  summary: <ul class="resume-item-list"><li>디자인, 프론트엔드개발100%</li><li><a href="https://drive.google.com/file/d/1jQb8GT6Wef5YR9SF_2NqcRjmrdWlQWzr/view?usp=sharing" target="_black">사용자 메뉴얼</a></li></ul>
-  img: <img src="./images/dashboard.jpg"/><img src="./images/cost.png"/> 
+  summary: <ul class="resume-item-list"><li>데시보드페이지 - jQuery drag and drop 기능으로 각판넬을 윈하는 위치로 이동가능하게 제작. 레이아웃으로 주제가 비슷한 내용을 하나의 판넬로 구성.</li><li>비용분석페이지 - 계획비용, 실적비용(수주가 대비실제이익), 수주가를  D3.js를 사용 바 그래프(svg)로 표현. 계획비용과 실적비용부분은 각 세부항목에 대한 비율을 D3.js를 이용 pie-chart(svg)로 표현.</li><li>화면구성(시안도출) 및 디자인, 프론트엔드개발100%</li><li><a href="https://drive.google.com/file/d/1jQb8GT6Wef5YR9SF_2NqcRjmrdWlQWzr/view?usp=sharing" target="_black">사용자 메뉴얼</a></li></ul>
+  img: <img src="./images/dashboard.jpg"/><img src="./images/cost_full.jpg"/> 
   skills: <span>html</span><span>css</span><span>javascript</span><span>jQuery</span><span>D3.js</span><span>ajax</span> <span>django</span><span>swagger</span><span>python</span>
 
 - project:   
   role: ● handoc
   duration: 2017
   description: 금형및 수주정보, 금형제작일정표, 설계일정표, BOM, 생산CAPA관리, 비용계획표, 기준정보관리 페이지로 이루어져 있습니다. #금형및 수주정보페이지에서 데이터를 입력하여 의뢰받은 금형정보를 입력합니다. 제작일정표 페이지에서는 제작일정을 작업자들끼리 공유함으로써, 다음 금형작업자가 일정을 잡습니다.
-  summary: <ul class="resume-item-list"><li>생산capa 페이지의 frontend작업을 맡아, ajax를 호출하여 받은 데이터를 변환과정을 거쳐 화면에 넣어주는 작업을 처리하였습니다.</li><li>화면 디자인, 퍼블리싱, 프론트엔드 작업(생산CAPA관리, 기준정보관리) 100%</li>L<li>생산capa페이지의 경우 일자별로 계획기관과 실적기관이 일치하는지 계산하여 각 셀에 색상표시</li><li><a href="https://drive.google.com/file/d/1A0Hja5biLPcfF8kAx5wpeUbxW5HQKTs7/view?usp=sharing" target="_black">기획안</a></li> </ul>
+  summary: <ul class="resume-item-list"><li>생산capa 페이지의 frontend작업을 맡아, ajax를 호출하여 받은 데이터를 변환과정을 거쳐 화면에 넣어주는 작업을 처리하였습니다.</li><li>화면 디자인, 퍼블리싱, 프론트엔드 작업(생산CAPA관리, 기준정보관리) 100%</li><li>생산capa페이지의 경우 일자별로 계획기관과 실적기관이 일치하는지 계산하여 각 셀에 색상표시</li><li><a href="https://drive.google.com/file/d/1A0Hja5biLPcfF8kAx5wpeUbxW5HQKTs7/view?usp=sharing" target="_black">기획안</a></li> </ul>
   img: <img src="./images/bom_3.png"/><img src="./images/handoc_1.png"/><img src="./images/info_after.png"/><img src="./images/capa.png"/>
   skills: <span>html</span><span>css</span><span>javascript</span><span>jQuery</span><span>ajax</span><span>django</span><span>swagger</span><span>python</span>
   #<img src="./images/info_before.png"/>
@@ -71,7 +71,7 @@
   duration: 2017
   description: 클라우드 서비스 목적으로 기획했던, 에임스오피스 패키지 프로젝트 입니다.  업체에 필요한 기능들을 넣기위해 업체인터뷰를 통해 고객들의 요구사항을 파악하여 진행되었습니다. 작업자의 요구사항으로는 CAD,CAM의 설계도면의 공유와 지시사항을 서면이 아닌 여러가지 방법으로 효율적으로 전달해 받기를 원했습니다. 관리자 요구사항으로는 해당 금형제작건의 진행사항, 현재상태 정보등을 알기를 윈했고, 업무 능률성 향상을 위한 작업자들의 진행현황을 보고, 유연한대처가 가능한 스케줄관리 기능을 원했습니다. 따라서 파일공유, 채팅기능이 메인인 작업자용 페이지, 작업자의 스케줄을 관리하는 관리자용 페이지로 시안을 기획 디자인하게 되었습니다. 
   summary: <ul class="resume-item-list"><li>기획 및 화면구성에 참여</li><li>화면구성(시안도출) 및 디자인 100%</li></ul>
-  img: <img src="./images/worker.png"/><img src="./images/manager.jpg"/> 
+  img: <img src="./images/worker.png"/><img src="./images/manager_.jpg"/> 
   skills:  
 
   #########
@@ -86,8 +86,8 @@
 - project: HD-Scheduler
   role:  ● 에이치디 스케줄러 - PC
   duration: 2019
-  description: 금형회사의 스케줄관리 back officce프로그램, SAP 입니다. 기본적으로 프로젝트 일정등록, 수정, 삭제 기능이 있고 프로젝트일정에 원하는 구성원을 추가할수 있습니다. 결제승인을 서면으로 받지 않고 사장이 승인을 한 경우 바로 중간관리자가 확인할수 있는 기능등이 있습니다.
-  summary: <ul class="resume-item-list"><li>slack-web-API를 사용해 결제승인요청 알람, 프로젝트에 지정된 여러사람들에게 알람기능 구현하였습니다.</li><li>(플러그인을 사용할경우 플러그인의기존 기능에 전부 커스터마이징이 필요할 것으로 판단되어)별도의 스케줄러(달력) 플러그인 없이, API로 json데이터를 받아 일정들을 연결해서 쏘팅하고, 스케줄러달력을 보여주는 부분까지 직접 구현하였습니다.</li><li>기획서의 내용대로 구현하려면 일정클릭이벤트, 일자 클릭이벤트가 서로 클릭영역이 겹치는 문제가 있었는데, 일자클릭 이벤트를 클릭하는 위치값으로 해당일자를 알아내어 처리함으로써 기획서대로 구현할 수 있었습니다.</li><li>pc,mobile 두가지 버전으로 만들어 졌습니다.</li><li>화면디자인, 프론트엔드 개발 100%</li><li class="no-print"><a href="https://drive.google.com/file/d/1--l4liMWGgBYi3Xl0iIMaIrkeV_xfDdl/view?usp=sharing" target="_black" >HD-Scheduler 사용자 메뉴얼</a></li></ul>
+  description: 금형회사의 스케줄관리 back officce프로그램, SPA 입니다. 기본적으로 프로젝트 일정등록, 수정, 삭제 기능이 있고 프로젝트일정에 원하는 구성원을 추가할수 있습니다. 결제승인을 서면으로 받지 않고 사장이 승인을 한 경우 바로 중간관리자가 확인할수 있는 기능등이 있습니다.
+  summary: <ul class="resume-item-list"><li>slack-API를 사용해 결제승인요청 알람, 프로젝트에 지정된 여러사람들에게 알람기능 구현하였습니다.</li><li>(플러그인을 사용할경우 플러그인의기존 기능에 전부 커스터마이징이 필요할 것으로 판단되어)별도의 스케줄러(달력) 플러그인 없이, API로 json데이터를 받아 일정들을 연결해서 쏘팅하고, 스케줄러달력을 보여주는 부분까지 직접 구현하였습니다.</li><li>기획서의 내용대로 구현하려면 일정클릭이벤트, 일자 클릭이벤트가 서로 클릭영역이 겹치는 문제가 있었는데, 일자클릭 이벤트를 클릭하는 위치값으로 해당일자를 알아내어 처리함으로써 기획서대로 구현할 수 있었습니다.</li><li>pc,mobile 두가지 버전으로 만들어 졌습니다.</li><li>화면디자인, 프론트엔드 개발 100%</li><li class="no-print"><a href="https://drive.google.com/file/d/1--l4liMWGgBYi3Xl0iIMaIrkeV_xfDdl/view?usp=sharing" target="_black" >HD-Scheduler 사용자 메뉴얼</a></li></ul>
   img: <img src="./images/Scheduler.jpg"/><img src="./images/mark_up.png"/>
   skills: <span>html</span><span>css</span><span>javascript</span><span>jQuery</span><span>ajax</span><span>D3.js</span><span>swagger</span><span>django</span><span>slack-API</span><span>python</span><span>mongoDB</span><span>mongoose</span><span>radis</span>
   #<ul class="resume-item-list"><li>사용자간의 알림의 경우 핸드폰에 slack앱을 설치하여 slackAPI연동을 통해 스케줄완료를 클릭할경우 사용자가 설정해놓은 팀 또는 해당스케줄의 참여자들에게 알림이 가게 구현되었습니다</li><li>slack web api를 사용하여 결제승인을 서면으로 받지 않고 사장이 승인을 한 경우 바로 중간관리자가 확인할수 있는 기능을 추가하였습니다.</li><li>이미업로드되어 있는 파일을 관리자가 스케줄에 등록하여 나머지 사람들은해당 스케줄에 연관된 파일을 볼수 있는 기능등이 있습니다.</li></ul><li>개발완료후 업체방문 및 교육까지 완료 하였습니다.</li>
@@ -119,7 +119,7 @@
   img: 
   skills: 
     
-- project: round-bird github
+- project: 
   role: ● Round bird
   duration: 2020.6-현재
   description: 일상 사진, 글을 공유하는 SNS web application, SPA입니다.
@@ -127,7 +127,7 @@
   img:  <img src="./images/round_bd_db.png"/>  
   url: #https://github.com/aloha-jh/round-bird
   skills: <span>ES6</span><span>JSX</span><span>react</span><span>react-redux</span><span>redux-saga</span><span>webpack</span><span>babel</span><span>nextjs</span><span>express</span><span>sequelize</span><span>mysql</span><span>npm</span>
-# <span>ES6</span><span>JSX</span><span>react</span><span>react-redux</span><span>redux-saga</span><span>webpack</span><span>babel</span><span>nextjs</span><span>express</span><span>material-ui</span><span>nodemon</span><span>sequelize</span><span>mysql</span><span>npm</span><span>axios</span><span>bcrypt</span><span>cors</span><span>dotenv</span><span>express-session</span><span>cookie-parser</span><span>morgan</span><span>multer</span><span>passport</span>
+
 
  
 - project:  
@@ -143,7 +143,7 @@
   duration: 2015.11-2016.2
   description: # 포트폴리오용으로 만든 디자이너에서 UI개발로 첫발돋음한 사이트
   summary: <ul class="resume-item-list"><li>html5시멘틱 마크업 사용, 웹표준과 웹접근성을 준수한 마크업</li><li>다양한 기기별로 정보전달에 용의하게 하기위해 media query를 사용하여 PC, tablet, mobile반응형으로 제작</li><li>banner-sliding, modal, layer-popup등의 UI인터렉션을 플러그인을 사용하지 않고 직접 jquery와 javascript로 제작</li></ul>
-  # img: <img src="./images/fly_2.png"/>  
+  img: <img src="./images/fly_2.png"/><img src="./images/kwah.png"/>
   skills: <span>html/css</span><span>javascript</span><span>jquery</span><span>media-query</span><span>php</span>
 
 
@@ -179,5 +179,18 @@
   duration:  
   description: 
   summary: <ul class="resume-item-list"><li>HD-프로그램들의 디자인 통일성을 위해 GUI guideline을 제작하였습니다.</li></ul>
-  img:   
+  img: <img src="./images/hdicon.jpg"/><img src="./images/hdicon_ex.jpg"/>
   skills:  
+
+
+  # 디자인학과로 대학교에 진학하였으나, 진로에 고민하던도중 웹에이젼시의 디자이너로 일하게 되었고, 웹개발에 흥미를 느껴
+  # 관련교육을 이수받아 연구소에서 3년간 일하게 되었습니다.
+  # 현재 대학원 진학이 목표이며, 
+
+  # 중학교때 사교육 없이 미술과목을 전교1등하게 되어 엄마의 권유로 미술학원에서 대입을 준비, 디자인학과 대학교로 진학하게 되었습니다.
+  # 당시 학교에서 열리는 디자인과 전시회를 위해 한학기를 꼬박 쏟아부었던 작품들이 전시회가 끝나고
+  # 폐기처분되고 버려지는 모습을 보고 모호한 디자인이라는 분야보다 좀더 실질적으로 도움이되는일이 없을까 고민하게 되었습니다. 
+  # 그렇게 진로에 고민하던 도중 웹에이젼시의 디자이너로 일하게 되었고, 코딩과 웹개발에 흥미를 느껴 관련교육을 이수받아 연구소에서
+  # 3년간 일하게 되었습니다.
+  # 무언가 만드는 일에 집중하고 탐구하는 일이 적성에 맞다고 생각하며, 사용자들이 어떻게하면 좀더 편리하게 웹을 사용할수 있을지 고민합니다.
+  # ###디자인 능력도 살려서 일을 할 수있고, 분야를 좋아합니다.
