--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -151,7 +151,7 @@
 - project:  
   role: ● fly asina
   duration: 2015.11-2016.2
-  description: HTML5 sementic 마크업, CSS3를 사용하여 트  # 포트폴리오용으로 만든 디자이너에서 UI개발로 첫발돋음한 사이트
+  description: HTML5 sementic 마크업, CSS3를 사용하여 트렌디한 웹 구현  # 포트폴리오용으로 만든 디자이너에서 UI개발로 첫발돋음한 사이트
   summary: <ul class="resume-item-list"><li>html5시멘틱 마크업 사용, 웹표준과 웹접근성을 준수한 마크업</li><li>다양한 기기별로 정보전달에 용의하게 하기위해 media query를 사용하여 PC, tablet, mobile반응형으로 제작</li><li>banner-sliding, modal, layer-popup등의 UI인터렉션을 플러그인을 사용하지 않고 직접 jquery와 javascript로 제작</li></ul>
   img: <img src="./images/fly_2.png"/><img src="./images/kwah.png"/>
   skills: <span>html/css</span><span>javascript</span><span>jquery</span><span>media-query</span><span>php</span>
